# internal/auth/api.go
@@ -7,6 +7,14 @@ import (
 )
 
 // RegisterHandlers registers handlers for different HTTP requests.
+// @Summary Authenticates a user
+// @Description Authenticates a user and generates a JWT
+// @Tags Auth
+// @Produce json
+// @Router /login/{id} [post]
+// @Success 200
+// @Failure 400
+// @Failure 404
 func RegisterHandlers(rg *routing.RouteGroup, service Service, logger log.Logger) {
 	rg.Post("/login", login(service, logger))
 }
